# povray

./: .gitignore  .gitmodules  README.md  changes.txt  index.html  povray.pro  qtpovray.pro
.github/ISSUE_TEMPLATE/: feature_request.md
debian/: changelog  control  copyright  files  qtpovray-extras.install  qtpovray-includes.install  qtpovray.install  qtpovray.substvars  rules
distribution/qt/qtpovrayHelp/: bookmarks.html  colorEditor.html  colormapEditor.html  configColors.html  configDirs.html  configEditor.html  configKeys.html  configure.html  consoleFilters.html  debugger.html  developer.html  errors.html  find.html  index.html  insertText.html  render.html  renderView.html  resourceFilters.html  statusbar.html  tutorial.html  userInsertMenu.html  workspace.html
distribution/scenes/templates/: _index.htm
libraries/websocketpp/: readme_povray.txt
qt/gui/: debuggerman.cpp  debuggerman.h  findman.cpp  findman.h  gui.pro  helpman.cpp  helpman.h  insertmenuman.cpp  insertmenuman.h  main.cpp  mainwindow.cpp  mainwindow.h  preferencedata.h  preferences.cpp  preferences.h  qtpov.qrc  qtpov.rc  qtpovrayversion.h  version.h  vfeclient.cpp  vfeclient.h  workspace.cpp  workspace.h
qt/gui/debugger/: debuggerconsole.cpp  debuggerconsole.h  debuggerman.cpp  debuggerman.h  debuggerpanel.cpp  debuggerpanel.h  symboltreeitem.cpp  symboltreeitem.h  symboltreemodel.cpp  symboltreemodel.h  symboltreeview.cpp  symboltreeview.h
qt/gui/dock/: consoledock.cpp  consoledock.h  dockman.cpp  dockman.h  dropdown.cpp  dropdown.h  filterdialog.cpp  filterdialog.h  maintoolbar.cpp  maintoolbar.h  renderdock.cpp  renderdock.h  resourcedock.cpp  resourcedock.h  searchman.cpp  searchman.h  statusbar.cpp  statusbar.h
qt/gui/editor/: bookmarkman.cpp  bookmarkman.h  codeeditor.cpp  codeeditor.h  coloreditor.cpp  coloreditor.h  colormapeditor.cpp  colormapeditor.h  highlighter.cpp  highlighter.h  imagedisplayer.cpp  imagedisplayer.h  povcolor.cpp  povcolor.h
qt/install/: doWinDeployQt.bat  qtpovray.1  qtpovray.desktop  qtpovray.nsi  stageqtpovray.sh
qt/libpovray/: libpovray.pro
qt/libraries/: libraries.pro
qt/libraries/boost_chrono/: boost_chrono.pro
qt/libraries/boost_date_time/: boost_date_time.pro
qt/libraries/boost_system/: boost_system.pro
qt/libraries/boost_thread/: boost_thread.pro
qt/libraries/jpeg/: jpeg.pro
qt/libraries/png/: png.pro
qt/libraries/tiff/: tiff.pro
qt/libraries/zlib/: zlib.pro
qt/platform/: platform.pro
qt/vfe/: .gitignore  vfe.pro
qt/winpovconfig/: syspovconfig.h  syspovconfigbase.h
source/: source.pro
source/backend/: frame.h  povray.cpp
source/backend/bounding/: boundingtask.cpp
source/backend/control/: messagefactory.cpp  parsertask.cpp  parsertask.h  renderbackend.cpp  renderbackend.h  scene.cpp  scene.h
source/backend/lighting/: photonestimationtask.cpp  photonestimationtask.h  photonshootingstrategy.cpp  photonshootingtask.cpp  photonshootingtask.h  photonsortingtask.cpp  photonsortingtask.h  photonstrategytask.cpp  photonstrategytask.h
source/backend/render/: radiositytask.h  tracetask.cpp  tracetask.h
source/backend/scene/: backendscenedata.h  view.cpp  view.h  viewthreaddata.h
source/backend/support/: task.h
source/base/: build.h  messenger.cpp  messenger.h  textstream.cpp  version.h
source/base/image/: openexr.cpp
source/core/scene/: object.h  scenedata.h
source/frontend/: parsermessagehandler.cpp  parsermessagehandler.h  processrenderoptions.cpp  renderfrontend.cpp  renderfrontend.h
source/parser/: configparser.h  debugger.cpp  debugger.h  fncode.cpp  parser.cpp  parser.h  parser_expressions.cpp  parser_functions.cpp  parser_functions_utilities.cpp  parser_fwd.h  parser_materials.cpp  parser_strings.cpp  parser_tokenizer.cpp  povdbgobject.cpp  povdbgobject.h  povdbgobjectnames.h  scanner.h
source/povcore/: coretypes.h  precomp.cpp
source/povcore/bounding/: bounding.cpp  bounding.h  boundingbox.cpp  boundingbox.h  boundingcylinder.cpp  boundingcylinder.h  boundingsphere.cpp  boundingsphere.h  bsptree.cpp  bsptree.h
source/povcore/colour/: spectral.cpp  spectral.h
source/povcore/lighting/: lightgroup.cpp  lightgroup.h  lightsource.cpp  lightsource.h  photons.cpp  photons.h  radiosity.cpp  radiosity.h  subsurface.cpp  subsurface.h
source/povcore/material/: blendmap.cpp  blendmap.h  interior.cpp  interior.h  media.cpp  media.h  noise.cpp  noise.h  normal.cpp  normal.h  pattern.cpp  pattern.h  pigment.cpp  pigment.h  portablenoise.cpp  portablenoise.h  texture.cpp  texture.h  warp.cpp  warp.h
source/povcore/math/: chi2.cpp  chi2.h  hypercomplex.cpp  hypercomplex.h  jitter.cpp  jitter.h  matrix.cpp  matrix.h  polynomialsolver.cpp  polynomialsolver.h  quaternion.cpp  quaternion.h  randcosweighted.cpp  randcosweighted.h  randomsequence.cpp  randomsequence.h  spline.cpp  spline.h  vector.h
source/povcore/render/: ray.cpp  ray.h  trace.cpp  trace.h  tracepixel.cpp  tracepixel.h
source/povcore/scene/: atmosphere.cpp  atmosphere.h  camera.cpp  camera.h  object.cpp  object.h  scenedata.cpp  scenedata.h  tracethreaddata.cpp  tracethreaddata.h
source/povms/: povmscpp.h  povmsid.h
source/vm/: configvm.h  fnintern.cpp  fnpovfpu.cpp  fnpovfpu.h
tests/websockets/client/unix/: Makefile.in  config.h.in  configure.ac  makeinclude.in
unix/: README.md  configure.ac  install  install.txt  povray.conf  povrayws.1  prebuild.sh
unix/config/: ax_compile_stdcxx_11.m4  ax_websockets.m4
unix/povconfig/: syspovconfig.h
vfe/: debuggermessages.cpp  debuggermessages.h  vfe.cpp  vfe.h  vfesession.cpp  vfesession.h
vfe/qt/: config.h  config.h.in  qtgraphics.cpp  qtgraphics.h  qtoptions.cpp  qtoptions.h  qtvfe.cpp  qtvfe.h  vfeplatform.cpp  vfeplatform.h
vfe/websockets/: vfeplatform.cpp  vfeplatform.h  websockconsole.cpp  websocketserver.cpp  websocketserver.h  websockoptions.cpp  wsconsole.cpp  wsgraphics.cpp  wsgraphics.h  wshandler.cpp  wshandler.h  wsoptions.cpp  wsoptions.h  wsserver.cpp  wsserver.h  wswinconsole.cpp
windows/vs2015/: .gitignore  povray.sln  websockets.vcxproj  websockets.vcxproj.filters
(+104 files in other folders)
